--- a/cv.tex
+++ b/cv.tex
@@ -22,7 +22,7 @@
 
       % Fake text to add separator      
 \fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{%
-	.....
+	....zefezl.
 }}
 
 % In the aside, each new line forces a line break
@@ -38,25 +38,44 @@
 	\section{Mail}
 	\href{mailto:guillaume@leroux.email}{\textbf{guillaume@}\\leroux.email}
 	\href{mailto:guillaume.le.roux@hotmail.fr}{\textbf{guillaume.le.roux@}\\hotmail.fr}
-	~
-	\section{Web \& Git}
-	\href{http://www.carminebenedetto.net}{carminebenedetto.net}
-	\href{https://bitbucket.org/neoben}{bitbucket.org/neoben}
-	\href{https://github.com/neoben}{github.com/neoben}
-	~
 	\section{Programming}
-	\includegraphics[scale=0.62]{img/programming.png}
+	\includegraphics[scale=0.40]{img/5stars.png}\\\textbf{Php, Symfony, HTML, CSS, SQL, git}
+	\includegraphics[scale=0.40]{img/4stars.png}\\\textbf{Java, Javascript, Apache2}
+	\includegraphics[scale=0.40]{img/3stars.png}\\\textbf{ReactJs, Go}
+	\includegraphics[scale=0.40]{img/2stars.png}\\\textbf{VueJs, C++}
 	~
 	\section{OS Preference}
 	\textbf{Linux}\includegraphics[scale=0.40]{img/5stars.png}
 	\textbf{Windows}\includegraphics[scale=0.40]{img/2stars.png}
 	~
 	\section{Personal Skills}
-	\includegraphics[scale=0.62]{img/personal.png}
+	documentclass[tikz,border=2mm]{standalone}
+	\begin{tikzpicture}[font=\sffamily\bfseries\large,
+     text=white,
+     border/.style={line width=14mm}]
+\foreach \angle/\col [remember=\angle as \last (initially 0)] in
+    {90/blue, 125/cyan, 160/green!30!black, 210/green, 270/orange, 360/red}{
+        \draw[\col, border] (\last:2cm)
+             arc[start angle=\last, end angle=\angle, radius=2cm];
+        \draw[white, line width=1mm] (\last:1.3)--++(\last:1.4);
+}
+\node[line width=1mm, draw, circle, minimum width=2.5cm, white, fill=blue!80] {C/C++};
+\node at (60:2cm) {Python};
+\node at (108:2cm) {Other};
+\node at (143:2cm) {Java};
+\node[text width=1cm, align=center, font=\sffamily\bfseries\small] at (185:2cm)
+    {HTML CSS JS PHP};
+\node at (240:2cm) {Bash};
+\node at (295:2cm) {Android};
+\end{tikzpicture}
 	~
 	\section{Languages}
-	\textbf{Italian}\includegraphics[scale=0.40]{img/5stars.png}
+	\textbf{French}\includegraphics[scale=0.40]{img/5stars.png}
 	\textbf{English}\includegraphics[scale=0.40]{img/4stars.png}
+	~
+	\section{Hobbies}
+    	\item Sailing as Skipper
+    	\item Sports, Handball in club
 \end{aside}
 
 \section{Experience}
@@ -65,7 +84,9 @@
 	{03/17 - Now}
 	{Software Engineer}
 	{Smile Open Source Solutions}
-	{Design and development of algorithms, solutions and high speed mobility           schemes for Wireless Mesh Networks. Design and development of embedded software     for Wireless Network devices.\\}
+	{Design and development of algorithms, solutions and high speed mobility
+	schemes for Wireless Mesh Networks. Design and development of embedded software     
+	for Wireless Network devices.\\}
 \end{entrylist}
 
 \section{Education}
@@ -80,7 +101,7 @@
 	\emph{Relators: Prof. Enzo Mingozzi, Ing. Carlo Vallati, Prof. Luciano Lenzini.}\\}
 	\entry
 	{2011 - 2014}
-	{ Three-year university degree }
+	{ Bachelor's degree \\in Applied Mathematics ans Social Sciences }
 	{Université Rennes 2 - France}
 	{Main subjects: Matematics and Physics, Programming, Operational Research, Telecommunication Systems, Digital and Analogical Electronics.\\
 	\emph{Title of the Thesis: "Development, Management and Migrations of web contents and applications".}\\
