--- a/cv.tex
+++ b/cv.tex
@@ -1,3 +1,4 @@
+%!TEX TS-program = xelatex
 \documentclass{friggeri-cv}
 \usepackage{afterpage}
 \usepackage{hyperref}
@@ -56,6 +57,11 @@
 \item Sports, Handball in club
 \end{aside}
 
+\section{Description}
+\begin{entrylist}
+	Hello, I'm looking for a job as Back-end developper
+\end{entrylist}
+
 \section{Experience}
 \begin{entrylist}
 	\entry
@@ -63,10 +69,15 @@
 	{Software Engineer}
 	{Smile Open Source Solutions}
 	{
-		Responsible for end to end website for different customer \\
-	 	Elephorm : Initiated the rework of their website in Symfony in a team of 4 developper in an agil methodology \\
-		Suez : I made a POC for a Progressive Web App with a front in ReactJs and a Back in Go \\
-		Axelliance : I've worked for a year in their office, i was in charge of creating new WebSite and existing park maintenance \\
+		For Smile I have mainly worked for four differents customer : \\
+		\textbf{Trigano} : In a team of three we made the front of their intranet using ReactJs and consuming API's \\
+		\textbf{Elephorm} : Initiated the rework of their website for four month in Symfony. \\
+			In a team of four developper in an agil process, we set up a stack of continuous development with a Jenkins, we used code review and differents qualtity tools to have quality reference. \\
+		\textbf{Suez} : I made a POC for a Progressive Web App with a front in ReactJs and a Back in Go \\
+				For this POC i was in autonomy with a direct relation with the customer \\
+		\textbf{Axelliance} : 
+			In a team of four developper we were in charge of developping and launching new website and existing park maintenance \\
+			we had to work with a product owner who create the specifications in an agile process \\
 	}
 \end{entrylist}
 
@@ -76,43 +87,23 @@
 	{2014 - 2017}
 	{Master's Degree in Computer Engineering}
 	{Université Rennes 1 - France}
-	{Curriculum Networking and Multimedia.\\
-	Main subjects: Network Applications, Systems Architecture and Security, Mobile Applications, Multemedia Information            Processing.\\
-	\emph{Title of the Thesis: "A Handoff Algorithm based on Link Quality Prediction for Mass Transit Wireless Mesh Networks"      .}\\
-	\emph{Relators: Prof. Enzo Mingozzi, Ing. Carlo Vallati, Prof. Luciano Lenzini.}\\}
+	{Main subjects : Algorithms, Object Oriented Programming, Design paterns. \\
+	During this graduation we had to do several projects using differents languages \\
+	such as a text Editor in Java, client/server music streaming in C, an asteroid game in OCaml, ...
+	}
 	\entry
 	{2011 - 2014}
-	{ Bachelor's degree \\in Applied Mathematics ans Social Sciences }
+	{Bachelor's degree \\in Applied Mathematics ans Social Sciences }
 	{Université Rennes 2 - France}
-	{Main subjects: Matematics and Physics, Programming, Operational Research, Telecommunication Systems, Digital and Analogical Electronics.\\
-	\emph{Title of the Thesis: "Development, Management and Migrations of web contents and applications".}\\
-	\emph{Thesis activity carried out during an internship period at Atitlan Engineering SRL.}\\}
+	{Main subjects: Mathematics such as aglebra, probabilitys, statistics and enconomy.}
 \end{entrylist}
 
 
-\section{Other Info}
-For the Italian job market:\\
-\emph{Si autorizza il trattamento delle informazioni contenute nel curriculum in conformità alle disposizioni previste dal d.lgs. 196/2003. Si dichiara altresì di essere consapevole che, in caso di dichiarazioni non veritiere, si è passibili di sanzioni penali ai sensi del DPR 445/00 oltre alla revoca dei benefici eventualmente percepiti.}
-\\
 \begin{flushleft}
-	\emph{January 14th, 2014}
+	\emph{Febuary 20th, 2019}
 \end{flushleft}
 \begin{flushright}
 	\emph{Guillaume Le Roux}
 \end{flushright}
-
-%%% This piece of code has been commented by Karol Kozioł due to biblatex errors. 
-% 
-%\printbibsection{article}{article in peer-reviewed journal}
-%\begin{refsection}
-%  \nocite{*}
-%  \printbibliography[sorting=chronological, type=inproceedings, title={international peer-reviewed conferences/proceedings}, notkeyword={france}, heading=subbibliography]
-%\end{refsection}
-%\begin{refsection}
-%  \nocite{*}
-%  \printbibliography[sorting=chronological, type=inproceedings, title={local peer-reviewed conferences/proceedings}, keyword={france}, heading=subbibliography]
-%\end{refsection}
-%\printbibsection{misc}{other publications}
-%\printbibsection{report}{research reports}
 
 \end{document}
