--- a/cv.tex
+++ b/cv.tex
@@ -48,6 +48,9 @@
 	\textbf{Linux}\includegraphics[scale=0.40]{img/5stars.png}
 	\textbf{Windows}\includegraphics[scale=0.40]{img/2stars.png}
 	~
+	\section{Personal skills}
+	\includegraphics[scale=0.75]{test.pdf}
+	~
 	\section{Languages}
 	\textbf{French}\includegraphics[scale=0.40]{img/5stars.png}
 	\textbf{English}\includegraphics[scale=0.40]{img/4stars.png}
