--- a/cv.tex
+++ b/cv.tex
@@ -15,18 +15,18 @@
 \addbibresource{bibliography.bib}
 \RequirePackage{xcolor}
 \definecolor{pblue}{HTML}{0395DE}
-
 \begin{document}
-\header{Guillaume } {Le Roux}
-      {Computer Engineer}
+\header{Guillaume Le Roux} {}
+	{Computer Engineer}
 
-      % Fake text to add separator      
+	% Fake text to add separator      
 \fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{%
 	.....
 }}
 
 \begin{aside}
-	\section{Address}
+	\includegraphics[scale=1] {profil.png}
+\section{Address}
 	16, Kergaigne
 	44350 Guerande
 	France
@@ -36,7 +36,6 @@
 	~
 	\section{Mail}
 	\href{mailto:guillaume@leroux.email}{\textbf{guillaume@}\\leroux.email}
-	\href{mailto:guillaume.le.roux@hotmail.fr}{\textbf{guillaume.le.roux@}\\hotmail.fr}
 	~
 	\section{Programming}
 	\includegraphics[scale=0.40]{img/5stars.png}\\\textbf{Php, Symfony, HTML, CSS, SQL, git}
@@ -49,20 +48,19 @@
 	\textbf{Windows}\includegraphics[scale=0.40]{img/2stars.png}
 	~
 	\section{Personal skills}
-	\includegraphics[scale=0.75]{test.pdf}
+	\includegraphics[scale=0.70]{test.pdf}
 	~
 	\section{Languages}
 	\textbf{French}\includegraphics[scale=0.40]{img/5stars.png}
 	\textbf{English}\includegraphics[scale=0.40]{img/4stars.png}
-	~
-	\section{Hobbies}
-\item Sailing as Skipper
-\item Sports, Handball in club
+	\textbf{Breton}\includegraphics[scale=0.40]{img/4stars.png}
 \end{aside}
 
 \section{Description}
 \begin{entrylist}
-	Hello, I'm looking for a job as Back-end developper
+	I am looking for a job as back end developper \\
+	After two years of experience as Full Stack-Web developper, in Smile Open Source Solutions \\
+	In order to improve my English I am looking for a job in an english speaker country \\	
 \end{entrylist}
 
 \section{Experience}
@@ -73,14 +71,18 @@
 	{Smile Open Source Solutions}
 	{
 		For Smile I have mainly worked for four differents customer : \\
-		\textbf{Trigano} : In a team of three we made the front of their intranet using ReactJs and consuming API's \\
-		\textbf{Elephorm} : Initiated the rework of their website for four month in Symfony. \\
+		\\
+		\textbf{Trigano} : First french constructor of camper and caravan \\
+			In a team of three we made the front of their intranet using ReactJs and consuming API's \\
+		\textbf{Elephorm} : Theyproduce and sells online lessons on various topics \\ 
+			Initiated the rework of their website for four month in Symfony. \\
 			In a team of four developper in an agil process, we set up a stack of continuous development with a Jenkins, we used code review and differents qualtity tools to have quality reference. \\
-		\textbf{Suez} : I made a POC for a Progressive Web App with a front in ReactJs and a Back in Go \\
+		\textbf{Suez} : A world leader in sustainable resource management \\
+				I made a POC for a Progressive Web App with a front in ReactJs and a Back in Go \\
 				For this POC i was in autonomy with a direct relation with the customer \\
-		\textbf{Axelliance} : 
+		\textbf{Axelliance} : Second french broker wholesealer in insurance \\
 			In a team of four developper we were in charge of developping and launching new website and existing park maintenance \\
-			we had to work with a product owner who create the specifications in an agile process \\
+			we had to work with a product owner who create the specifications in an agile process 
 	}
 \end{entrylist}
 
@@ -100,13 +102,14 @@
 	{Université Rennes 2 - France}
 	{Main subjects: Mathematics such as aglebra, probabilitys, statistics and enconomy.}
 \end{entrylist}
-
-
-\begin{flushleft}
-	\emph{Febuary 20th, 2019}
-\end{flushleft}
-\begin{flushright}
-	\emph{Guillaume Le Roux}
-\end{flushright}
+\section{Hobbies}
+\begin{entrylist}
+	\entry  {} {Sailing as skipper} {}
+	{
+		For many years i went to sailing, with a crew of four to six sailors. \\
+		During one to two weeks cruise i had to manage different situations
+	}
+	\entry  {} {Sports, Handball in club} {} {I have been playing Handball for ten years, in differents club}
+\end{entrylist}
 
 \end{document}
