--- a/cv.tex
+++ b/cv.tex
@@ -32,7 +32,7 @@
 	France
 	~
 	\section{Tel}
-	+336 75 94 39 92
+	+33 6 75 94 39 92
 	~
 	\section{Mail}
 	\href{mailto:guillaume@leroux.email}{\textbf{guillaume@}\\leroux.email}
@@ -51,16 +51,17 @@
 	\includegraphics[scale=0.70]{test.pdf}
 	~
 	\section{Languages}
-	\textbf{French}\includegraphics[scale=0.40]{img/5stars.png}
-	\textbf{English}\includegraphics[scale=0.40]{img/4stars.png}
-	\textbf{Breton}\includegraphics[scale=0.40]{img/4stars.png}
+	\textbf{French, mother tongue}\includegraphics[scale=0.40]{img/5stars.png}
+	\textbf{English, level B1}\includegraphics[scale=0.40]{img/4stars.png}
+	\textbf{Breton, level B2}\includegraphics[scale=0.40]{img/4stars.png}
 \end{aside}
 
 \section{Description}
 \begin{entrylist}
-	I am looking for a job as back end developper \\
-	After two years of experience as Full Stack-Web developper, in Smile Open Source Solutions \\
-	In order to improve my English I am looking for a job in an english speaker country \\	
+	I am currently looking for an experience in a foreign country in order to discover \\
+	and learn about new cultures. \\
+    After two years of experience as Full Stack-Web developper, in Smile Open Source Solutions, \\
+	I am looking for a job as back-end or fullstack developper \\
 \end{entrylist}
 
 \section{Experience}
@@ -70,19 +71,20 @@
 	{Software Engineer}
 	{Smile Open Source Solutions}
 	{
-		For Smile I have mainly worked for four differents customer : \\
+		Since I have graduated I have been working for Smile, first european  \\ open source integrator.
+		With Smile i have worked for different clients : \\
 		\\
-		\textbf{Trigano} : First french constructor of camper and caravan \\
+		\textbf{Trigano} : First french constructor of camping cars and caravans \\
 			In a team of three we made the front of their intranet using ReactJs and consuming API's \\
-		\textbf{Elephorm} : Theyproduce and sells online lessons on various topics \\ 
-			Initiated the rework of their website for four month in Symfony. \\
-			In a team of four developper in an agil process, we set up a stack of continuous development with a Jenkins, we used code review and differents qualtity tools to have quality reference. \\
+		\textbf{Elephorm} : They produce and sell online lessons on various topics \\ 
+			Initiated the rework of their website for four months in Symfony. \\
+			In a team of four developpers in an agil process, we set up a stack of continuous development with a Jenkins, we used code reviews and different quality tools to have quality measures. \\
 		\textbf{Suez} : A world leader in sustainable resource management \\
-				I made a POC for a Progressive Web App with a front in ReactJs and a Back in Go \\
-				For this POC i was in autonomy with a direct relation with the customer \\
+				I made a proove of concept for a Progressive Web App with a front in ReactJs and a Back in Go \\
+				For this POC i was in autonomy {with a direct relation with the client} \\
 		\textbf{Axelliance} : Second french broker wholesealer in insurance \\
-			In a team of four developper we were in charge of developping and launching new website and existing park maintenance \\
-			we had to work with a product owner who create the specifications in an agile process 
+			In a team of four developpers we were in charge of developping and launching new websites and existing park maintenance \\
+			we had to work and interact with other teams, product owners in an agile process 
 	}
 \end{entrylist}
 
@@ -92,9 +94,9 @@
 	{2014 - 2017}
 	{Master's Degree in Computer Engineering}
 	{Université Rennes 1 - France}
-	{Main subjects : Algorithms, Object Oriented Programming, Design paterns. \\
-	During this graduation we had to do several projects using differents languages \\
-	such as a text Editor in Java, client/server music streaming in C, an asteroid game in OCaml, ...
+	{Main subjects : Algorithms, Object Oriented Programming, Design patterns. \\
+	During this graduation we had to do several projects using different languages 
+	such as a text Editor in Java, client/server music streaming in C, an asteroid game in OCaml
 	}
 	\entry
 	{2011 - 2014}
@@ -106,10 +108,10 @@
 \begin{entrylist}
 	\entry  {} {Sailing as skipper} {}
 	{
-		For many years i went to sailing, with a crew of four to six sailors. \\
-		During one to two weeks cruise i had to manage different situations
+		As skipper i was in charge of a crew of three to five sailor, i had to face different unforseseen events such as strom, breakdown.
+		I was also in charge and i have to explain and assign task to the crew and coordinate all of them.
 	}
-	\entry  {} {Sports, Handball in club} {} {I have been playing Handball for ten years, in differents club}
+	\entry  {} {Sports, Handball in club} {} {I have been playing Handball for now ten years, I had to be here to help the club the week ends to organisate the games of the younger teams}
 \end{entrylist}
 
 \end{document}
