--- a/cv.tex
+++ b/cv.tex
@@ -32,7 +32,7 @@
 	France
 	~
 	\section{Tel}
-	+336 75 94 39 92
+	+33 6 75 94 39 92
 	~
 	\section{Mail}
 	\href{mailto:guillaume@leroux.email}{\textbf{guillaume@}\\leroux.email}
@@ -55,14 +55,13 @@
 	\textbf{English}\includegraphics[scale=0.40]{img/4stars.png}
 	\textbf{Breton}\includegraphics[scale=0.40]{img/4stars.png}
 \end{aside}
-
 \section{Description}
 \begin{entrylist}
 	I am looking for a job as back end developper \\
 	After two years of experience as Full Stack-Web developper, in Smile Open Source Solutions \\
-	In order to improve my English I am looking for a job in an english speaker country \\	
+	I am currently looking for a new experience in a new country in order to discover new cultures. \\
 \end{entrylist}
-
+   
 \section{Experience}
 \begin{entrylist}
 	\entry
@@ -70,18 +69,18 @@
 	{Software Engineer}
 	{Smile Open Source Solutions}
 	{
-		For Smile I have mainly worked for four differents customer : \\
+		For Smile I have mainly worked for four different customers : \\
 		\\
 		\textbf{Trigano} : First french constructor of camper and caravan \\
 			In a team of three we made the front of their intranet using ReactJs and consuming API's \\
-		\textbf{Elephorm} : Theyproduce and sells online lessons on various topics \\ 
+		\textbf{Elephorm} : They produce and sell online lessons on various topics \\ 
 			Initiated the rework of their website for four month in Symfony. \\
-			In a team of four developper in an agil process, we set up a stack of continuous development with a Jenkins, we used code review and differents qualtity tools to have quality reference. \\
+			In a team of four developpers in an agil process, we set up a stack of continuous development with a Jenkins, we used code review and differents qualtity tools to have quality reference. \\
 		\textbf{Suez} : A world leader in sustainable resource management \\
 				I made a POC for a Progressive Web App with a front in ReactJs and a Back in Go \\
 				For this POC i was in autonomy with a direct relation with the customer \\
 		\textbf{Axelliance} : Second french broker wholesealer in insurance \\
-			In a team of four developper we were in charge of developping and launching new website and existing park maintenance \\
+			In a team of four developpers we were in charge of developping and launching new websites and existing park maintenance \\
 			we had to work with a product owner who create the specifications in an agile process 
 	}
 \end{entrylist}
@@ -92,24 +91,24 @@
 	{2014 - 2017}
 	{Master's Degree in Computer Engineering}
 	{Université Rennes 1 - France}
-	{Main subjects : Algorithms, Object Oriented Programming, Design paterns. \\
-	During this graduation we had to do several projects using differents languages \\
+	{Main subjects : Algorithms, Object Oriented Programming, Design patterns. \\
+	During this graduation we had to do several projects using different languages
 	such as a text Editor in Java, client/server music streaming in C, an asteroid game in OCaml, ...
 	}
 	\entry
 	{2011 - 2014}
 	{Bachelor's degree \\in Applied Mathematics ans Social Sciences }
 	{Université Rennes 2 - France}
-	{Main subjects: Mathematics such as aglebra, probabilitys, statistics and enconomy.}
+	{Main subjects: Mathematics such as algebra, probabilities, statistics and economy.}
 \end{entrylist}
 \section{Hobbies}
 \begin{entrylist}
 	\entry  {} {Sailing as skipper} {}
 	{
-		For many years i went to sailing, with a crew of four to six sailors. \\
-		During one to two weeks cruise i had to manage different situations
+		For many years i went sailing, with crews of four to six sailors. \\
+		During one to two weeks cruises i had to manage different situations
 	}
-	\entry  {} {Sports, Handball in club} {} {I have been playing Handball for ten years, in differents club}
+	\entry  {} {Sports, Handball in clubs} {} {I have been playing Handball for ten years, in different clubs}
 \end{entrylist}
 
 \end{document}
